# StockPredictionPro

./: .dockerignore  .env.example  .gitignore  4.2.0  CHANGELOG.md  LICENSE  Makefile  Readme.md  build_exe.py  docker-compose.yml  dockerfile  environment.yml  pyproject.toml  requirements.txt  setup.py  stockpred.spec
app/: streamlit_app.py
app/components/: alerts.py  charts.py  filters.py  forms.py  metrics.py  tables.py
app/pages/: 01_🏠_Overview.py  02_📊_Data_&_Indicators.py  03_📈_Chart_Analysis.py  04_🔮_Regression_Models.py  05_🎯_Classification_Models.py  06_⚖️_Model_Comparison.py  07_💡_Trading_Signals.py  08_💰_Portfolio_Management.py  09_📉_Backtest_&_Performance.py  10_📁_Exports_&_Reports.py  11_🔧_Admin_&_Logs.py
app/styles/: colors.py  custom.css  themes.py
app/utils/: cache_helpers.py  session_state.py  ui_helpers.py
config/: api_config.yaml  app_config.yaml  indicators_config.yaml  logging.yaml  model_config.yaml  trading_config.yaml
data/: __init__.py
deployment/ansible/: playbook.yml
deployment/docker/: Dockerfile.dev  Dockerfile.prod  docker-compose.dev.yml  docker-compose.prod.yml  nginx.conf
deployment/kubernetes/: configmap.yaml  deployment.yaml  ingress.yaml  namespace.yaml  service.yaml
deployment/terraform/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
notebooks/01-data-exploration/: data-quality-assessment.ipynb  market-data-analysis.ipynb
notebooks/02-feature-engineering/: feature-selection.ipynb  technical-indicators.ipynb  time-series-features.ipynb
notebooks/02-feature-engineering/outputs/: time_series_features.csv  time_series_features_correlation.csv  time_series_features_list.txt
notebooks/03-model-development/: advanced-algorithms.ipynb  baseline-models.ipynb  ensemble-methods.ipynb
notebooks/03-model-development/catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
notebooks/04-model-evaluation/: backtesting-framework.ipynb  model-comparison.ipynb  performance-metrics.ipynb
notebooks/05-research/: market-patterns-analysis.ipynb  trading-strategies.ipynb
notebooks/outputs/: XGBoost_Demo_performance_report.csv  advanced_models_comparison.csv  asset_correlations.csv  market_pattern_summary.csv  market_timing_indicators.csv  model_comparison_summary.csv  performance_metrics.csv  portfolio_performance.csv  seasonal_patterns.csv  technical_indicators.csv  technical_indicators_list.txt  trade_history.csv  trading_signals.csv  trading_strategy_summary.csv  volatility_regimes.csv
notebooks/utilities/: notebook-utils.py  plotting-helpers.py
scripts/automation/: daily_update.py  health_check.py  monthly_cleanup.py  weekly_retrain.py
scripts/data/: clean_data.py  download_data.py  update_data.py  validate_data.py
scripts/deployment/: build_docker.py  deploy_to_cloud.py  rollback.py  setup_ci_cd.py
scripts/models/: deploy_models.py  evaluate_models.py  optimize_hyperparameters.py  train_all_models.py
scripts/setup/: install_dependencies.py  setup_config.py  setup_database.py  setup_directories.py
scripts/utilities/: backup_data.py  generate_docs.py  performance_profiler.py  security_audit.py
src/api/: dependencies.py  exceptions.py  main.py
src/api/middleware/: auth.py  cors.py  logging.py  rate_limiting.py
src/api/routes/: backtests.py  data.py  health.py  models.py  predictions.py  signals.py
src/api/schemas/: data_schemas.py  error_schemas.py  model_schemas.py  prediction_schemas.py
src/data/: cache.py  manager.py  validators.py
src/data/fetchers/: alpha_vantage.py  base_fetcher.py  fred.py  polygon.py  quandl.py  yahoo_finance.py
src/data/processors/: cleaner.py  resampler.py  splitter.py  transformer.py
src/evaluation/: plots.py  reports.py
src/evaluation/backtesting/: engine.py  performance.py  portfolio.py  risk_management.py  strategies.py
src/evaluation/metrics/: classification_metrics.py  custom_metrics.py  regression_metrics.py  trading_metrics.py
src/evaluation/validation/: combinatorial_cv.py  purged_cv.py  time_series.py  walk_forward.py
src/features/: feature_store.py  leakage_detector.py  pipeline.py
src/features/indicators/: base.py  custom.py  momentum.py  trend.py  volatility.py  volume.py
src/features/targets/: classification.py  multi_horizon.py  regression.py
src/features/transformers/: lags.py  (+4 more)
src/models/: factory.py  persistence.py  selection.py  training.py
src/trading/: portfolio.py
src/utils/: config_loader.py  exceptions.py  file_io.py  governance.py  helpers.py  logger.py  timing.py  validators.py
tests/: conftest.py
tests/utils/: assertions.py  mock_factories.py  test_helpers.py
(+49 files in other folders)
